# CES-35

./: .gitignore  README.md
Lab 2 (Sockets)/: CMakeLists.txt  README.md  Vagrantfile
Lab 2 (Sockets)/docs/: README.md
Lab 2 (Sockets)/src/: CMakeLists.txt  Makefile  MultithreadedServer.cpp  MultithreadedServer.hpp  README.md  build  dnsresolver.cpp  web-client.cpp  web-server.cpp
Lab 2 (Sockets)/src/Client/: CMakeLists.txt  web-client.cpp
Lab 2 (Sockets)/src/Lib/: CMakeLists.txt  HTTPRequest.cpp  HTTPRequest.hpp  HTTPResponse.cpp  HTTPResponse.hpp  dnsresolver.cpp
Lab 2 (Sockets)/src/Server/: CMakeLists.txt  MultithreadedServer.cpp  MultithreadedServer.hpp  web-server.cpp
Lab 2 (Sockets)/src/www/: index.html
Lab 2 (Sockets)/templates/: README.md
Lab 2 (Sockets)/templates/C++/: echo-server.cpp
Lab 2 (Sockets)/templates/Python/: ._TCPServer.py  TCPClient.py  TCPServer.py  UDPClient.py  UDPServer.py
Lab 2 (Sockets)/www/: README.md  index.html
Lab3/: Vagrantfile  provisioner.sh
Lab3/resources/ces35lab3/: Vagrantfile
Lab4/: ProjetoPT.pkt  lab4-GIANLUIGI.pkt
Lab6/: README.md
